<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:background="@color/backgroundDark">

        <Button
            android:id="@+id/btn_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/home"
            android:textColor="@android:color/white" />
    </FrameLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/listBackground" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:background="@color/backgroundDark">

        <Button
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/search"
            android:textColor="@android:color/white" />
    </FrameLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/listBackground" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:background="@color/backgroundDark">

        <Button
            android:id="@+id/btn_library"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/albums"
            android:textColor="@android:color/white" />
    </FrameLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/listBackground" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:background="@color/backgroundDark">

        <Button
            android:id="@+id/btn_buy_online"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/online"
            android:textColor="@android:color/white" />
    </FrameLayout>
</LinearLayout>