<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_padding_small"
    app:cardBackgroundColor="@color/cardview_dark_background"
    app:cardCornerRadius="@dimen/card_view_radius"
    app:cardElevation="@dimen/margin_padding_small"
    app:cardUseCompatPadding="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_padding_margin">

        <ImageView
            android:id="@+id/song_icon"
            android:layout_width="@dimen/icon_tiny_dimen"
            android:layout_height="@dimen/icon_tiny_dimen"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/song_icon" />

        <TextView
            android:id="@+id/tv_song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/song_icon"
            android:layout_marginStart="@dimen/default_padding_margin"
            android:layout_marginLeft="@dimen/default_padding_margin"
            android:layout_toEndOf="@+id/song_icon"
            android:layout_toRightOf="@+id/song_icon"
            android:maxLines="1"
            android:text="@string/song_name"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_song_name"
            android:layout_marginStart="@dimen/default_padding_margin"
            android:layout_marginLeft="@dimen/default_padding_margin"
            android:layout_toEndOf="@+id/song_icon"
            android:layout_toRightOf="@+id/song_icon"
            android:maxLines="1"
            android:text="@string/Artist_name"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/white" />

        <ImageButton
            android:id="@+id/download_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorAccent"
            android:contentDescription="@string/download"
            android:padding="@dimen/margin_padding_small"
            android:src="@drawable/ic_file_download_black_24dp"
            android:visibility="invisible" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
